--- a/dos33.html
+++ b/dos33.html
@@ -797,7 +797,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     100             PAGE
 1B00:4C 84 1D       101 <a class="f" name="BEGIN"   >BEGIN       </a>JMP <a class="x" href="#DBINIT">DBINIT</a>                                      ; === DOS loads @ $1B00 ===
                     102 ;                                                           ; Loaded in at $38D4
-                    103 <a class="f" name="DOSREL"  >DOSREL      </a>EQU *                                           ; Called from File <a class="file" href="#BOOTLDR">BOOTLDR</a>, Page <a class="page" href="#page12">12</a>, Line #<a class="line" href="#DI3">298</a><!--#BOOTLDR_298-->
+                    103 <a class="f" name="DOSREL"  >DOSREL      </a>EQU *                                           ; Called from File <a class="file" href="#BOOTLDR">BOOTLDR</a>, Page <a class="page" href="#page12">12</a>, Line #<a class="line" href="#DI3">298</a><!-- #BOOTLDR_298-->
                     104 ;
                     105 ; GET RELOCATION PARMS
                     106 ;
@@ -5736,7 +5736,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     027 *    ---- ASSUMES ----   *
                     028 * 1 USEC CYCLE TIME      *
                     029 **************************
-39FD:00 00 00       030         DS 3,0              ;AVOID PAGE BOUNDARY CROSSING...; T0$3 @ $FC *sigh* 3 unused bytes
+39FD:00 00 00       030         DS 3,0              ;AVOID PAGE BOUNDARY CROSSING...; T0$3 @ $FC *wastes* 3 bytes
 3A00:A2 11          031 <a class="f"    name="MSWAIT"     >MSWAIT      </a>LDX #$<span class="adr">11</span>                                        ; === <b class="ts">T0$4</b> === *sigh* Typical bloated code ...
 3A02:CA             032 <a class="f"    name="MSW1"       >MSW1        </a>DEX             DELAY 86 USEC.                  ; ... should just adjust algorithm timing instead!
 3A03:D0 FD          033             BNE <a class="x" href="#MSW1"    >MSW1</a>
@@ -5882,7 +5882,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3AB7:13 B8 14       161             DFB $13,$B8,$14                                 ; B7 -- B9
 3ABA:15 16 17       162             DFB $15,$16,$17                                 ; BA BB BC
 3ABD:18 19 1A       163             DFB $18,$19,$1A                                 ; BD BE BF
-3AC0:C0 C1 C2       164             DFB $C0,$C1,$C2                                 ; -- -- --   *sigh* 11 unused bytes
+3AC0:C0 C1 C2       164             DFB $C0,$C1,$C2                                 ; -- -- --   *wastes* 11 bytes (unused)
 3AC3:C3 C4 C5       165             DFB $C3,$C4,$C5                                 ; -- -- --   /sarcasm But who cares, we have 48K right!?
 3AC6:C6 C7 C8       166             DFB $C6,$C7,$C8                                 ; -- -- --   This is why DOS takes seconds longer to boot.
 3AC9:C9 CA 1B       167             DFB $C9,$CA,$1B                                 ; -- -- CB
@@ -6990,11 +6990,12 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 <h1>Stats.</h1>
 <p>
-Spelling mistakes: 5
-<p>
-Total Functions: 90
-<p>
-Total Variables: 86
+<table>
+    <tr><td>Spelling mistakes:  </td><td>  5</td></tr>
+    <tr><td>Total Functions:    </td><td> 90</td></tr>
+    <tr><td>Total Variables:    </td><td> 86</td></tr>
+    <tr><td>Total Wasted memory:</td><td>114</td></tr>
+</table>
 <p>
 
 <h1>Symbols (Alphabetical)</h1>
