Fix description for official comments

--- a/dos33.html
+++ b/dos33.html
@@ -642,7 +642,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
     </tr>
     <tr>
         <td>COMMENT</td>
-        <td>Official comment</td>
+        <td>Official comment -- spelling mistakes and improper indentation are verbatim</td>
     </tr>
     <tr>
         <td>Annotation</td>
