Update stats and add vim count commands

--- a/dos33.html
+++ b/dos33.html
@@ -6991,10 +6991,11 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <h1>Stats.</h1>
 <p>
 <table>
-    <tr><td>Spelling mistakes:  </td><td>  5</td></tr>
-    <tr><td>Total Functions:    </td><td> 90</td></tr>
-    <tr><td>Total Variables:    </td><td> 86</td></tr>
-    <tr><td>Total Wasted memory:</td><td>114</td></tr>
+    <tr><td>Spelling mistakes:  </td><td>  5</td></tr> <!-- :%s/\*spelling\*//gn -->
+    <tr><td>Total Functions:    </td><td> 99</td></tr> <!-- :%s/class="f"//gn -->
+    <tr><td>Total Variables:    </td><td>102</td></tr> <!-- :%s/class="d"//gn -->
+    <tr><td>Total Wasted bytes (run-time memory):</td><td>111</td></tr>
+    <tr><td>Total Wasted sectors:</td><td>  3</td></tr>
 </table>
 <p>
 
