Fix up track/sector/offset usage

--- a/dos33.html
+++ b/dos33.html
@@ -663,38 +663,38 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <a class="macro" name="DIAGMOD">DIAGMOD     </a>EQU  0
                     006 <a class="macro" name="DOS33B" >DOS33B      </a>EQU  1
                     007 <a class="macro" name="ULC"    >ULC         </a>EQU  0
-                    008             INCLUDE <a class="file" href="#RELOCTR">RELOCTR</a>,,2                              ; $1B00 .. $####
-                    009             INCLUDE <a class="file" href="#DOSINIT">DOSINIT</a>,,2                              ; $#### .. $####
-                    010             INCLUDE <a class="file" href="#DOSHOOK">DOSHOOK</a>,,2                              ; $#### .. $####
+                    008             INCLUDE <a class="file" href="#RELOCTR">RELOCTR</a>,,2                              ; $1B00 .. $1CFF, T0SA - T0SB
+                    009             INCLUDE <a class="file" href="#DOSINIT">DOSINIT</a>,,2                              ; $1D00 .. $1E80, T0SC - T0SD
+                    010             INCLUDE <a class="file" href="#DOSHOOK">DOSHOOK</a>,,2                              ; $1E81 .. $####, T0SD
                     011             INCLUDE <a class="file" href="#CMDSCAN">CMDSCAN</a>,,2                              ; $#### .. $####
                     012             INCLUDE <a class="file" href="#XOPNCLS">XOPNCLS</a>,,2                              ; $#### .. $####
                     013             INCLUDE <a class="file" href="#XLODSAV">XLODSAV</a>,,2                              ; $#### .. $####
                     014             INCLUDE <a class="file" href="#XMISCMD">XMISCMD</a>,,2                              ;
-                    015             INCLUDE <a class="file" href="#DOSGOER">DOSGOER</a>,,2                              ;       .. $27D3
-                    016             INCLUDE <a class="file" href="#BLDFTAB">BLDFTAB</a>,,2                              ; $27D4 .. $2883
-                    017             INCLUDE <a class="file" href="#CMDTBLS">CMDTBLS</a>,,2                              ; $2884 .. $####
+                    015             INCLUDE <a class="file" href="#DOSGOER">DOSGOER</a>,,2                              ;       .. $27D3,      - T1S6
+                    016             INCLUDE <a class="file" href="#BLDFTAB">BLDFTAB</a>,,2                              ; $27D4 .. $2883, T1S6 - T1S7
+                    017             INCLUDE <a class="file" href="#CMDTBLS">CMDTBLS</a>,,2                              ; $2884 .. $####, T1S7 - T?S?
                     018             INCLUDE <a class="file" href="#FDOSENT">FDOSENT</a>,,2                              ;
                     019             INCLUDE <a class="file" href="#FOPCLRW">FOPCLRW</a>,,2                              ;
                     020             INCLUDE <a class="file" href="#FDELCAT">FDELCAT</a>,,2                              ;
                     021             INCLUDE <a class="file" href="#FMTRWIO">FMTRWIO</a>,,2                              ;
                     022             INCLUDE <a class="file" href="#FLOCNXB">FLOCNXB</a>,,2                              ;
                     023             INCLUDE <a class="file" href="#FLOCSEC">FLOCSEC</a>,,2                              ;
-                    024             INCLUDE <a class="file" href="#FVCBUFS">FVCBUFS</a>,,2                              ; $3397 .. $35FF
-                    025             INLUCDE <a class="file" href="#BOOTLDR">BOOTLDR</a>,,2                              ; $3600 .. $36FF
-                    026             INCLUDE <a class="file" href="#COREQUS">COREQUS</a>,,1                              ;
+                    024             INCLUDE <a class="file" href="#FVCBUFS">FVCBUFS</a>,,2                              ; $3397 .. $35FF, T2S2 - T2S4
+                    025             INLUCDE <a class="file" href="#BOOTLDR">BOOTLDR</a>,,2                              ; $3600 .. $36FF, T0S0
+                    026             INCLUDE <a class="file" href="#COREQUS">COREQUS</a>,,1                              ; n/a
                     027             INCLUDE <a class="file" href="#PRENIBL">PRENIBL</a>,,1                              ;
                     028             INCLUDE <a class="file" href="#WRITRTN">WRITRTN</a>,,1                              ;
                     029             INCLUDE <a class="file" href="#POSTNRD">POSTNRD</a>,,1                              ;
-                    030             INCLDUE <a class="file" href="#RDADSEK">RDADSEK</a>,,1                              ;
-                    031             INCLUDE <a class="file" href="#MSWAITR">MSWAITR</a>,,1                              ; $3A00 .. $3Cxx, T0$4 - T0$6
+                    030             INCLDUE <a class="file" href="#RDADSEK">RDADSEK</a>,,1                              ; $3??? .. $3C55, T?S? - T0$6
+                    031             INCLUDE <a class="file" href="#MSWAITR">MSWAITR</a>,,1                              ; $3C56 .. $3Cxx, T0$6 - T0$?
                     032             INCLUDE <a class="file" href="#WRITADR">WRITADR</a>,,1                              ;
-                    033             INCLUDE <a class="file" href="#RWTSONE">RWTSONE</a>,,1                              ; $3D00 .. $3DAA
-                    034             INCLUDE <a class="file" href="#RWTSTWO">RWTSTWO</a>,,1                              ; $3DAB .. $3EAE
-                    035             INCLUDE <a class="file" href="#FORMATR">FORMATR</a>,,1                              ; $3EAF .. $3FC7
+                    033             INCLUDE <a class="file" href="#RWTSONE">RWTSONE</a>,,1                              ; $3D00 .. $3DAA, T0S7
+                    034             INCLUDE <a class="file" href="#RWTSTWO">RWTSTWO</a>,,1                              ; $3DAB .. $3EAE, T0S7 - T0S8
+                    035             INCLUDE <a class="file" href="#FORMATR">FORMATR</a>,,1                              ; $3EAF .. $3FC7, T0S8 - T?S?
                     036             INCLUDE <a class="file" href="#DOSPTCH">DOSPTCH</a>,,1                              ; $3FC8 .. $3FFF
 
 
-<hr>; === <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <a class="page" name="page110">110</a>, <b class="ts">T0$A</b>, $<span class="adr">1B00</span> ===<hr>
+<hr>; === <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <a class="page" name="page110">110</a>, <b class="ts">T0$A</b>, $<span class="adr">??00</span> ===<hr>
                     001             PAGE
                     002 *****************************************************
                     003 *                                                   *
@@ -1237,7 +1237,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     226 
 
 
-<hr>; === <a class="file" name="DOSHOOK">DOSHOOK</a> - Input / Output Vector, Page <a class="page" name="page44">44</a>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="DOSHOOK">DOSHOOK</a> - Input / Output Vector, Page <a class="page" name="page44">44</a>,  <b class="ts">T0SD</b> .. , $<span class="adr">9E81</span> - $<span class="adr">????</span> ===<hr>
                     001 
                     002 
                     003 
@@ -6077,7 +6077,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     123 
 
 
-<hr>; === <a class="file" name="RWTSONE">RWTSONE</a> - Read Write Track Sector - Part 1, Page <a class="page" name="page116">116</a>, <b class="ts">T0$8</b>, $<b class="adr">BD00</b>-<b class="adr">BE46</b> ===<hr>
+<hr>; === <a class="file" name="RWTSONE">RWTSONE</a> - Read Write Track Sector - Part 1, Page <a class="page" name="page116">116</a>, <b class="ts">T0$7</b>, $<b class="adr">BD00</b>-<b class="adr">BDAA</b> ===<hr>
                     001             STBL '16-SECTOR RWTS'
                     002 
                     003 
@@ -6403,7 +6403,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     323 
 
 
-<hr>; === <a class="file" name="RWTSTWO">RWTSTWO</a> - Read Write Track Sector - Part 2, Page <a class="page" name="page122">122</a>, <b class="ts">T0$8</b>, $<b class="adr">BDAB</b> - $<b class="adr">BEAE</b> ===<hr>
+<hr>; === <a class="file" name="RWTSTWO">RWTSTWO</a> - Read Write Track Sector - Part 2, Page <a class="page" name="page122">122</a>, <b class="ts">T0$7</b> - <b class="ts">T0$8</b> , $<b class="adr">BDAB</b> - $<b class="adr">BEAE</b> ===<hr>
                     001 *
                     002 * DISK IS NOW UP TO SPEED: READ IT!
                     003 * NOW CHECK: IF IT IS NOT THE FORMAT DISK COMMAND,
@@ -6986,7 +6986,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     056     FIN
 <hr><hr>
 </pre>
-
 
 <h1>Stats.</h1>
 <p>
