--- a/dos33.html
+++ b/dos33.html
@@ -6990,6 +6990,16 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 <h1>Wasted Memory</h1>
 <p>
+<div style="padding-left:5%">
+<table border="1" style="border-width: 1px; border-collapse: collapse">
+    <tr><td>T/S </td><td>Range   </td><td>File   </td><td>Description                             </td><td>Line</td></tr>
+    <tr><td>T0S0</td><td>$B3..$FD</td><td>BOOTLDR</td><td>Wastes  75 bytes                        </td></tr>
+    <tr><td>T0S1</td><td>     $FF</td><td>BOOTLDR</td><td>Wastes   1 bytes                        </td></tr>
+    <tr><td>T0S3</td><td>$FD..$FF</td><td>MSWAITR</td><td>Wastes   3 bytes                        </td></tr>
+    <tr><td>T0S6</td><td>$00..$55</td><td>MSWAITR</td><td>Wastes  86 bytes for NBUF2              </td></tr>
+    <tr><td>T0SB</td><td>$81..$FF</td><td>RELOCTR</td><td>Wastes 127 bytes                        </td></tr>
+</table>
+</div>
 <p>
 
 <h1>Wasted Sectors</h1>
@@ -6999,12 +7009,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <div style="padding-left:5%">
 <table border="1" style="border-width: 1px; border-collapse: collapse">
     <tr><td>T/S </td><td>Range   </td><td>File   </td><td>Description                             </td><td>Line</td></tr>
-    <tr><td>T0S0</td><td>$B3..$FD</td><td>BOOTLDR</td><td>Wastes  75 bytes                        </td></tr>
-    <tr><td>T0S1</td><td>     $FF</td><td>BOOTLDR</td><td>Wastes   1 bytes                        </td></tr>
-    <tr><td>T0S3</td><td>$FD..$FF</td><td>MSWAITR</td><td>Wastes   3 bytes                        </td></tr>
     <tr><td>T0S5</td><td>$00..$FF</td><td>MSWAITR</td><td>Wastes 256 bytes for NBUF1              </td></tr>
-    <tr><td>T0S6</td><td>$00..$55</td><td>MSWAITR</td><td>Wastes  86 bytes for NBUF2              </td></tr>
-    <tr><td>T0SB</td><td>$81..$FF</td><td>RELOCTR</td><td>Wastes 127 bytes                        </td></tr>
     <tr><td>T2S3</td><td>$00..$FF</td><td>FCVBUFS</td><td>Wastes 255 bytes for a single $02 @ BB !</td></tr>
     <tr><td>TSS4</td><td>$00..$FF</td><td>FCVBUFS</td><td>Wastes 256 bytes!                       </td></tr>
 </table>
