--- a/dos33.html
+++ b/dos33.html
@@ -7017,7 +7017,7 @@ I've annotated <b>*wastes*</b> listing locations where memory is wasted.
             <tr><td>T/S </td><td>Range   </td><td>File   </td><td>Description                             </td></tr>
             <tr><td>T0S5</td><td>$00..$FF</td><td>MSWAITR</td><td>Wastes 256 bytes for NBUF1              </td></tr>
             <tr><td>T2S3</td><td>$00..$FF</td><td>FCVBUFS</td><td>Wastes 255 bytes for a single byte $02 @ $BB !</td></tr>
-            <tr><td>TSS4</td><td>$00..$FF</td><td>FCVBUFS</td><td>Wastes 256 bytes!                       </td></tr>
+            <tr><td>T2S4</td><td>$00..$FF</td><td>FCVBUFS</td><td>Wastes 256 bytes!                       </td></tr>
         </table>
     </font>
 </div>
